--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- navbar -->
     <h1>Hello</h1>
     <!-- navbar  -->
+    <footer>
+      <h2>Footer title</h2>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
